--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@aspnet/signalr": "^1.0.27",
+    "@microsoft/signalr": "^5.0.7",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
@@ -45,7 +47,7 @@
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~12.11.6",
+    "@types/node": "^12.11.7",
     "codelyzer": "^5.2.2",
     "ini": "^1.3.7",
     "jasmine-core": "~3.5.0",
